Fix dbeck's profile due to package name overflowing

--- a/content/stylesheets/components/_cards.scss
+++ b/content/stylesheets/components/_cards.scss
@@ -117,6 +117,7 @@
       overflow: hidden;
       flex-shrink: 1;
       flex-grow: 1;
+      overflow-wrap: anywhere;
 
       &::after {
         content: "";
